refactor: update Jackson library versions to 2.18.0-rc1